--- a/portfolio1.html
+++ b/portfolio1.html
@@ -20,7 +20,7 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html" class="active">SERVICE</a></li>
+						<li><a href="portfolio1.html" class="active">SERVICE</a></li>
 						<!-- <li><a href="elements.html">Elements</a></li> -->
 					</ul>
 				</nav>
